2010-03-15  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaComplexType.cs : quick fix for bug #584664. Fill base
	  content type particles in prior to filling its own.

2010-02-16  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaComplexType.cs : in modern .NET, xs:anyType has the
	  appropriate qname.

2010-01-27  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlAtomicValue.cs: handle Decimal here to process xs:decimal as
	  a valid base type for simple types. patch by Luke Ravitch,
	  Fixed bug #557452.

2010-01-26  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaComplexType.cs : validate base type first and then
	  validate particle. Patch by Jonas Larsson, fixed bug #502251.

2010-01-26  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaSet.cs : when adding a schema with "", it seems treated
	  as if it were null. Fixed bug #571650.

2009-05-19  Jonas Larsson <jonas.larsson@manodo.se> 

	* XmlSchemaUtil.cs, BuiltInDatatype.cs, XmlSchemaComplexType.cs:
	  Introduced new MS compatibility option by environment variable,
	  for bug #502115.

2009-05-19  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaGroupRef.cs : when getting optimized particle, reset was
	  incomplete. Patch by Jonas Larsson. Fixed bug #502168.

2009-05-11  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaComplexType.cs : make complex content type work like .NET
	  does. Patch by Jonas Larsson. Fixed bug #501814.

2009-05-11  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaComplexType.cs : do not forget to clear attributes
	  before Compile(). Patch by Jonas Larsson. Fixed bug #501763.

2009-05-07  Jonas Larsson <jonas.larsson@manodo.se> 

	* XmlAtomicValue.cs : support more type conversion. fixed bug #501666.

2009-04-22  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaValidator.cs : quick fix for bug #496205. Reset xsi:type
	  and endelement.

2009-04-22  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemaValidator.cs, BuiltInDatatype.cs, XmlAtomicValue.cs: